--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:"Roboto" , sans-serif;
     font-optical-sizing: auto;
     background-color: #eee;
     margin: 0;
